some bulshit, many things does not work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,10 +39,40 @@ FetchContent_Declare(
     GIT_REPOSITORY https://github.com/ibireme/yyjson.git
     GIT_TAG 0.10.0
 )
-FetchContent_MakeAvailable(yyjson)
 
-# Benchmark executable
+# Fetch nlohmann json
+FetchContent_Declare(
+    nlohmann_json
+    GIT_REPOSITORY https://github.com/nlohmann/json.git
+    GIT_TAG v3.11.3
+)
+
+# Fetch nlohmann json
+FetchContent_Declare(
+    simdjson
+    GIT_REPOSITORY https://github.com/simdjson/simdjson.git
+    GIT_TAG v3.12.3
+)
+
+# Fetch rapid json
+FetchContent_Declare(
+    rapidjson
+    GIT_REPOSITORY https://github.com/Tencent/rapidjson.git
+    GIT_TAG v1.1.0
+)
+set(RAPIDJSON_BUILD_TESTS OFF CACHE BOOL "Disable RapidJSON Tests")
+set(RAPIDJSON_BUILD_EXAMPLES OFF CACHE BOOL "Disable RapidJSON Examples")
+
+# Finish fetches
+FetchContent_MakeAvailable(yyjson nlohmann_json rapidjson)
+
+# executable
 add_executable(json_benchmark benchmarks/json/benchmark_json.cpp)
 
-# Link GoogleBenchmark
+# headers
+target_include_directories(json_benchmark PRIVATE ${nlohmann_json_SOURCE_DIR}/single_include)
+target_include_directories(json_benchmark PRIVATE ${rapidjson_SOURCE_DIR}/include)
+target_include_directories(json_benchmark PRIVATE ${simdjson_SOURCE_DIR}/include)
+
+# link libraries
 target_link_libraries(json_benchmark PRIVATE benchmark::benchmark yyjson)
