an stable state of json benchmarks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,14 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.11)
+
+# Set policy to honor visibility properties for all target types
+cmake_policy(SET CMP0063 NEW)
 
 set(This BenchmarksCpp)
 
 project(${This} C CXX)
 
 set(CMAKE_C_STANDARD_REQUIRED 99)
-set(CMAKE_CXX_STANDARD_REQUIRED 11)
+set(CMAKE_CXX_STANDARD_REQUIRED 14)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Define third-party directory
@@ -47,7 +50,7 @@ FetchContent_Declare(
     GIT_TAG v3.11.3
 )
 
-# Fetch nlohmann json
+# Fetch simdjson
 FetchContent_Declare(
     simdjson
     GIT_REPOSITORY https://github.com/simdjson/simdjson.git
@@ -58,13 +61,29 @@ FetchContent_Declare(
 FetchContent_Declare(
     rapidjson
     GIT_REPOSITORY https://github.com/Tencent/rapidjson.git
-    GIT_TAG v1.1.0
+    GIT_TAG master
 )
 set(RAPIDJSON_BUILD_TESTS OFF CACHE BOOL "Disable RapidJSON Tests")
 set(RAPIDJSON_BUILD_EXAMPLES OFF CACHE BOOL "Disable RapidJSON Examples")
+set(RAPIDJSON_HAS_STDSTRING ON CACHE BOOL "Enable std::string support")
+set(RAPIDJSON_NOMEMBERITERATORCLASS ON CACHE BOOL "Disable member iterator class")
+
+# Fetch JsonBox
+FetchContent_Declare(
+    jsonbox
+    GIT_REPOSITORY https://github.com/anhero/JsonBox.git
+    GIT_TAG 0.6.2
+)
+
+# Fetch jsoncpp
+FetchContent_Declare(
+    jsoncpp
+    GIT_REPOSITORY https://github.com/open-source-parsers/jsoncpp.git
+    GIT_TAG 1.9.5
+)
 
 # Finish fetches
-FetchContent_MakeAvailable(yyjson nlohmann_json rapidjson)
+FetchContent_MakeAvailable(yyjson nlohmann_json rapidjson jsonbox simdjson jsoncpp)
 
 # executable
 add_executable(json_benchmark benchmarks/json/benchmark_json.cpp)
@@ -72,7 +91,7 @@ add_executable(json_benchmark benchmarks/json/benchmark_json.cpp)
 # headers
 target_include_directories(json_benchmark PRIVATE ${nlohmann_json_SOURCE_DIR}/single_include)
 target_include_directories(json_benchmark PRIVATE ${rapidjson_SOURCE_DIR}/include)
-target_include_directories(json_benchmark PRIVATE ${simdjson_SOURCE_DIR}/include)
+target_include_directories(json_benchmark PRIVATE ${jsoncpp_SOURCE_DIR}/include)
 
 # link libraries
-target_link_libraries(json_benchmark PRIVATE benchmark::benchmark yyjson)
+target_link_libraries(json_benchmark PRIVATE benchmark::benchmark yyjson JsonBox simdjson jsoncpp_lib)
